[package]
name = "stripe-update"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
bytes = "1.5.0"
isa-l = "0.2.0"
lru = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
thiserror = "1.0.50"
toml = "0.8.8"
range-collections = "0.4.5"
priority-queue = "1.3.2"
plotters = "0.3.5"
bytesize = { version = "1.2.0", features = ["serde"] }
indicatif = "0.17.7"
smallvec = "1.11.2"

[dev-dependencies]
hex = "0.4.3"

# Release with debuf infomation
[profile.rel-info]
inherits = "release"
debug = true
